--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
       </header>
 
       <main>
-        <div id="box_field">
-
-        </div>
+        <div id="box_field"></div>
       </main>
 
     </div>
