--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
     <div class="container">
 
       <header>
-
+        <div class="my_select">
+          <div class="selected">
+            <span>Facile</span>
+            <div class="arrow"></div>
+          </div>
+          <ul class="options">
+            <li class="opened"><span>Facile</span></li>
+            <li class=""><span>Medio</span</li>
+            <li class=""><span>Difficile</span</li>
+          </ul>
+        </div>
       </header>
 
       <main>
