--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="container">
 
       <header>
+
+        <button type="button" name="button">Reset</button>
+
         <div class="my_select">
           <div class="selected">
             <span>Facile</span>
