--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Langar&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css" integrity="sha512-f73UKwzP1Oia45eqHpHwzJtFLpvULbhVpEJfaWczo/ZCV5NWSnK4vLDnjTaMps28ocZ05RbI83k2RlQH92zy7A==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="   crossorigin="anonymous"></script>
@@ -16,21 +17,28 @@
     <div class="container">
 
       <header>
-        <div class="score_and_time">
-
+        <div class="flags_time">
+          <div id="time">
+            <p class="numbers">00:00</p>
+          </div>
+          <div id="flags">
+            <p class="numbers">99</p>
+          </div>
         </div>
         <h1>CAMPOINFETTATO</h1>
-        <button type="button" name="button">Reset</button>
-        <div class="my_select">
-          <div class="selected">
-            <span>Facile</span>
-            <div class="arrow"></div>
+        <div class="button_select">
+          <button type="button" name="button">Reset</button>
+          <div class="my_select">
+            <div class="selected">
+              <span>Facile</span>
+              <div class="arrow"></div>
+            </div>
+            <ul class="options">
+              <li class="opened"><span>Facile</span></li>
+              <li class=""><span>Medio</span</li>
+              <li class=""><span>Difficile</span</li>
+            </ul>
           </div>
-          <ul class="options">
-            <li class="opened"><span>Facile</span></li>
-            <li class=""><span>Medio</span</li>
-            <li class=""><span>Difficile</span</li>
-          </ul>
         </div>
       </header>
 
