--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
   <body>
 
     <div class="container">
-
       <header>
         <div class="flags_time">
           <div id="time">
-            <p class="numbers">00:00</p>
+            <p id="timer" class="numbers"><span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span></p>
           </div>
           <div id="flags">
-            <p class="numbers">99</p>
+            <p id="number_of_flags" class="numbers">99</p>
           </div>
         </div>
         <h1>CAMPOINFETTATO</h1>
         <div class="button_select">
-          <button type="button" name="button">Reset</button>
+          <button id="reset" type="button" name="button">Reset</button>
           <div class="my_select">
             <div class="selected">
               <span>Facile</span>
