--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p id="timer" class="numbers"><span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span></p>
           </div>
           <div id="flags">
-            <p id="number_of_flags" class="numbers">99</p>
+            <p id="number_of_flags" class="numbers"></p>
           </div>
         </div>
         <h1>CAMPOINFETTATO</h1>
