--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="js/script.js" charset="utf-8"></script>
     <title>Campominato</title>
   </head>
-  <body>
+  <body onselectstart="return false">
 
     <div class="container">
       <header>
