--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <i class="fas fa-cloud"></i>
           <i class="fas fa-cloud"></i>
         </div>
+        <button id="restart">Restart</button>
       </div>
 
     </div>
