--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container">
       <header>
-        <div class="flags_time">
+        <div id="flags_time">
           <div id="time">
             <p id="timer" class="numbers"><span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span></p>
           </div>
@@ -27,8 +27,8 @@
           </div>
         </div>
         <h1>CAMPOINFETTATO</h1>
-        <div class="button_select">
-          <button id="reset" type="button" name="button">Reset</button>
+        <div id="button_select">
+          <button id="reset" class="btn">Reset</button>
           <div class="my_select">
             <div class="selected">
               <span>Facile</span>
@@ -50,12 +50,12 @@
       <div id="winner">
         <div id="earth">
           <img src="img/airplane.png" alt="">
-          <p id="coviddi">NON CE N'È COVIDDI !!</p>
+          <p id="winner_phrase">NON CE N'È COVIDDI !!</p>
           <i class="fas fa-cloud"></i>
           <i class="fas fa-cloud"></i>
           <i class="fas fa-cloud"></i>
         </div>
-        <button id="restart">Restart</button>
+        <button id="restart" class="btn">Restart</button>
       </div>
 
     </div>
